# blake-email-sender

./: Enhancements.md  README.md  pyproject.toml
.github/workflows/: train.yml
src/: agents.py  app.py  retrieval.py  train_models.py
src/ml/: email_clustering.py  multimodal_processor.py  predictive_analytics.py  sentiment_analyzer.py
