[tool.poetry]
name = "blake-email-sender"
version = "0.1.0"
description = ""
authors = ["blakeam-tech <bamartin1618@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "2.32.0"
google-auth-oauthlib = "0.4.1"
google-auth-httplib2 = "0.2.0"
google-api-python-client = "2.137.0"
pandas = "2.2.2"
openai = "1.35.13"
streamlit = "1.36.0"
# Enhanced ML dependencies
torch = "^2.1.0"
transformers = "^4.35.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
textblob = "^0.17.1"
spacy = "^3.7.0"
sentence-transformers = "^2.2.0"
umap-learn = "^0.5.4"
hdbscan = "^0.8.33"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
